<resources>
    <string name="app_name">Tawseel</string>
    <string name="forget">" Forget Password ?"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracking_maps">Map</string>
    <string name="facebook_app_id">2846000032331536</string>
    <string name="fb_login_protocol_scheme">fb2846000032331536</string>
    <string name="title_activity_traking_maps">Map</string>
    <string name="proxy">When you do your advertisement, you agree to  <u>Terms of Privacy Policy and Use</u></string>
    <string name="text">The application provides you with a variety of electronic payment options such as, Visa Card, Paypal and Master Card With the ability to pay in cash</string>
    <string name="text_slid3">If you own a car, you can join us and work as a delivery representative within a distinguished team By filling in the registration data in the application</string>
    <string name="slid2">Tawseel application helps you choose the closest Marketing delegates to the site of your order through Display them across the map</string>
    <string name="login">Login</string>
    <string name="register">Create a new account by filling in the following information</string>
    <string name="login_text">Log in with your username and password</string>
    <string name="forget_pass">Restore password!</string>
    <string name="forget_lable">Fill in your username and email to recover your password</string>
    <string name="dailog">The delivery representative has an existing order, you cannot contact him now</string>
    <string name="distance">distance :</string>
    <string name="locationdriver">Delegate\'s Location :</string>
    <string name="contact_us">Emergency contact through direct WhatsApp</string>
    <string name="whats_live">WhatsApp direct</string>
    <string name="send_message_contact">You can contact us by sending a text message and we will respond to you as soon as possible</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="detail_bill">Bill details</string>
    <string name="name_customer">Service requester\'s name</string>
    <string name="name_of_dilevry">Delivery representative\'s name</string>
    <string name="number_bill">Bill Number</string>
    <string name="location_order">order location</string>
    <string name="location_pick_up">delivery location</string>
    <string name="paid_bill">Payment Amount (SAR)</string>
    <string name="delete_from_menu">Delete from the list</string>
    <string name="details_accounte">Profile personly</string>
    <string name="selecte_location">Detect Location</string>
    <string name="all_name">full name</string>
    <string name="number_phone">Phone Number</string>
    <string name="photo">Photograph</string>
    <string name="welecome_to_back">Welcome Back</string>
    <string name="start_here">Start From Here</string>
    <string name="login_with">Or Login using</string>
    <string name="current_order">Current</string>
    <string name="finshed_order">finished</string>
    <string name="pr_policy">Privacy Policy and Usage</string>
    <string name="success_save">The data has been saved successfully</string>
    <string name="rating_drivers">Delivery agents reviews</string>
    <string name="welecom_fotr_join">Welcome to join us!</string>
    <string name="you_have_accounte">Already have an account?</string>
    <string name="check_gps">Make sure the location feature is enabled</string>
    <string name="sitting">Settings</string>
    <string name="save">Save</string>
    <string name="paid_mothed">Electronic payment</string>
    <string name="sound_noty">Notification sound</string>
    <string name="svae_change">Save changes</string>
    <string name="share_app">Share The App</string>
    <string name="or_with">Or through</string>
    <string name="copy_link">Copy Link</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="name_drive">The driver\'s name :</string>
    <string name="paid_bill_trak">Delivery amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fill_detail">Fill in the following information</string>
    <string name="who_us">who are we ?</string>
    <string name="sure_delet">Are sure of the deleting process?</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="filed_oprator">Operation error</string>
    <string name="update_rate">"Update Driver Rating "</string>
    <string name="input_here">write here</string>
    <string name="upfate">Update</string>
    <string name="rate_of_driv">Delegate Rating:</string>
    <string name="Driver">Delegate:</string>
    <string name="type_amessage">write here</string>
    <string name="paid_bell_real">Payment Amount (SAR)</string>
    <string name="done_oprator">Process completed</string>
    <string name="billes">Bills</string>
    <string name="paided">Paid</string>
    <string name="done_order">Delivery completed notice</string>
    <string name="dont_pickuup">Not delivered</string>
    <string name="rate_add">Driver Rating</string>
    <string name="pay_mothed">Payment method :</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="notifecation">Notifications</string>
    <string name="bills">Bills</string>
    <string name="run_gps">Make sure the location feature is enabled</string>
    <string name="near_service">"Service will be available soon "</string>
    <string name="title_activity_select_location">map</string>
    <string name="logout">Log out</string>
    <string name="rate_app">Rating The App</string>
    <string name="cunct_us_menu">Conect Us</string>
    <string name="ratings">Rating</string>
    <string name="orders">Orders</string>
    <string name="server_order">Service Seeker</string>
    <string name="cancel_bill">Invoice No.:</string>
    <string name="paid_bill_">Bill No. has been paid</string>
    <string name="rate_dliviry">Driver rated:</string>
    <string name="refuse_order">The request for correspondence was rejected by the delivery representative for the request</string>
    <string name="accept_order">The correspondence request has been confirmed by the delivery representative of the request</string>
    <string name="deliverd_order">Your order has been delivered</string>
    <string name="noty_delviry_order">Delivery Notice for Order No.</string>
    <string name="new_bill">New Bill No.</string>
    <string name="click_on_the_green_icon_to_contact_the_driver">Click on the green icon to contact the driver</string>
    <string name="trak">Traking</string>
    <string name="agree">Agree</string>
    <string name="check_internet">Make sure you have Internet</string>
    <string name="maps">Maps</string>
    <string name="pr">عند قيامك بتسجيل جديد، فانك توافق على كافة شروط سياسة الخصوصية و الاستخدام</string>
    <string name="password">Password</string>
    <string name="nameofuser">User Name</string>
    <string name="new_coustomer">A New member?</string>
    <string name="error_name">Enter Your Name</string>
    <string name="error_pass">Enter Your Password</string>
    <string name="error_email">Enter Your Email</string>
    <string name="cancelopratpr">cancel operation</string>
    <string name="selecte_file">Choose the attachment</string>
    <string name="family">productive families</string>
    <string name="succesOprator">Operation accomplished successfully</string>
    <string name="contact">contact</string>
    <string name="location">Location</string>
    <string name="photoo">Photo</string>
    <string name="stores">Shops</string>
    <string name="video">Video</string>
    <string name="in_5_killo">Closer than 5 kilo</string>
    <string name="outub_nair">Ask for the nearest</string>
    <string name="selecte_servic">Select the type of service</string>
    <string name="order_retrant">Delivery of restaurants and other orders</string>
    <string name="other">Other</string>
    <string name="out_from_5">beyond 5 kilo</string>
    <string name="jouin_us">join us</string>
    <string name="paid_slide">Electronic payment</string>
    <string name="taxi">Taxi</string>
    <string name="order_percent">Delivery of a gift in another city</string>
    <string name="order_products">Delivery of Cargo and Merchandise</string>
    <string name="family_details">Dear customer, you will be directed to the productive families website, all you have to do is communicate with the families closest to you, choose your request, and the family communicates with the representative and delivers the request</string>
    <string name="follow">Continue</string>
    <string name="audio">audio file</string>
    <string name="my_location">My Location</string>
    <string name="today">Today</string>
    <string name="send_image">Photo sent</string>
    <string name="send_location">Location sent</string>
    <string name="send_video">Video sent</string>
    <string name="are_you_sur_call">Do you want to call this number?</string>
    <string name="down">Download</string>
    <string name="size_video">"This video is larger than 3 MB and may take longer to loading.... "</string>
    <string name="call">Contact</string>
    <string name="lang_display">Display language</string>
    <string name="rate">Rating</string>
    <string name="off">Delivery representative is not available at the moment</string>
    <string name="busey">The delivery representative has an existing order, you cannot contact him at the moment</string>
    <string name="loading">Loading....</string>
    <string name="empty_message">An empty message cannot be sent</string>
    <string name="select_loca">Select your location</string>
    <string name="enter_phon">Enter your phone</string>
    <string name="fill_details">Please fill in the information...</string>
    <string name="send_to_email">The message has been sent to your email.</string>
    <string name="send_message">Your message has been sent</string>
    <string name="please_fill_info">"Please,,input your details "</string>
    <string name="rated">rated</string>
    <string name="delete_from_noty">It has been removed from the notification list</string>
    <string name="not_whats">he doesn\'t have whatsapp</string>
    <string name="try_again">فشل الارسال حاول مرة أخرى</string>
    <string name="selected_method">اختر الية الدفع الالكتروني</string>
    <string name="add">اضافة</string>
</resources>