<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradint_login"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_15ssp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center"
                android:background="@drawable/backround_circle"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/bold"

                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/bold"
                android:text="@string/server_order"
                android:textColor="@color/login_color2"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        android:weightSum="9"
        app:layout_constraintHeight_percent=".55"
        app:layout_constraintTop_toBottomOf="@id/header_layout">
        <TextView
            android:id="@+id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:text="@string/home" />
        <TextView
            android:id="@+id/nav_userProfil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:text="@string/details_accounte" />
        <TextView
            android:id="@+id/nav_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"

            android:text="@string/orders" />
        <TextView
            android:id="@+id/tv_rates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:gravity="center_vertical|left"
            android:text="@string/ratings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:id="@+id/tv_sitting"
            android:text="@string/sitting" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:id="@+id/tv_about_us"
            android:text="@string/who_us" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:id="@+id/tv_call_us"
            android:text="@string/cunct_us_menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:id="@+id/tv_plociy"
            android:text="@string/pr_policy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|left"
            android:textColor="@color/black"
            android:id="@+id/tv_shar"
            android:text="@string/share_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/line_drawble"
            android:drawableLeft="@drawable/ic_chevron_left_"
            android:fontFamily="@font/medium"
            android:gravity="center_vertical|right"
            android:id="@+id/tv_rate"
            android:text="@string/rate_app" />


    </LinearLayout>
    <ProgressBar
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/nav_logout_pro"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_15sdp"
        android:fontFamily="@font/medium"
        android:gravity="center_vertical|right"
android:visibility="gone"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_logout"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_15sdp"
        android:fontFamily="@font/medium"
        android:gravity="center_vertical|right"

        android:text="@string/logout"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>