<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15ssp"
        android:layout_marginRight="@dimen/_15ssp"
        app:cardElevation="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/_15ssp"
        app:cardCornerRadius="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_15ssp"
            >

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/sure_delet"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:paddingBottom="@dimen/_2sdp"
                />

            <RelativeLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                    <TextView
                        android:id="@+id/tv_cancel"
                        android:background="@drawable/draw_delete"
                        android:layout_alignParentLeft="true"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="40dp"
                       android:textColor="#023C80"
                        android:text="@string/cancel"
                        android:gravity="center"

                        android:fontFamily="@font/medium"/>



                    <TextView
                        android:id="@+id/tv_delete"
                        android:background="@drawable/darwble_round_button_red"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/white"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="40dp"

                        android:gravity="center"
                        android:text="@string/delete"


                        android:fontFamily="@font/medium"/>



            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>