<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_15ssp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/drawble_edit2"
        android:padding="@dimen/_8ssp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/_10ssp">

            <ImageView
                android:layout_width="@dimen/_50ssp"
                android:layout_height="@dimen/_50ssp"
                android:layout_gravity="center"

                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logopages" />

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/near_service"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:id="@+id/btn_dissmes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_turrn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/drawble_button_dialog"
                    android:fontFamily="@font/medium"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    android:text="@string/agree"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>